--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -908,13 +908,18 @@ simuData$model3 = gsub("pontarp", "pw", simuData$model3)
 simuData$model3 = gsub("la", "am", simuData$model3)
 simuData$model3 = gsub("gen", "ge", simuData$model3)
 
-par(mfrow = c(7, 5), mar = c(2, 2, 2, 1), mgp = c(2.5, .6, 0))
+pdf('figures/metric_boxplots_across_models.pdf', height = 12, width = 10)
+par(mfrow = c(7, 5), mar = c(2.5, 2, 2, 1), mgp = c(2.5, .6, 0))
 
-boxplot(log10(simuData$number_of_lineages) ~ simuData$model3, main = 'log # of lineages', col = rainbow(8), cex.axis = .85, tck = -0.02)
+bp1 = boxplot(log10(simuData$number_of_lineages) ~ simuData$model3, main = 'log # of lineages', col = rainbow(8), xaxt = 'n', tck = -0.01, xlab = '')
+axis(1, at = 1:8, labels = bp1$names, las = 2, cex.axis = 1.4, tck = -0.01)
 
 for (i in statisticsIndices2) { 
-  boxplot(simuData[,i] ~ simuData$model3, main = names(simuData)[i], col = rainbow(8), cex.axis = .85, tck = -0.02)
+  bp = boxplot(simuData[,i] ~ simuData$model3, main = names(simuData)[i], col = rainbow(8), xaxt = 'n', tck = -0.01, xlab = '')
+  axis(1, at = 1:8, labels = bp$names, las = 2, cex.axis = 1.4, tck = -0.01)
 }
+
+dev.off()
 ```
 
 # Reproducibility information
