--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -303,19 +303,19 @@ alt.x.labels = dimnames(R2MatFull)[[1]]
 # Modifying a few model abbreviations here (e.g. am and pw)
 dimnames(R2MatFull)[[3]] = c("ca", "fh", "ge", "hs", "am", "pw", "ve", "xe")
 
-pdf('figures/all_metric_correlations.pdf', height = 11, width = 13)
-par(mfrow = c(1,1), mar = c(4,11,3,3), oma = c(3, 2, 2, 0))
+pdf('figures/all_metric_correlations.pdf', height = 15, width = 13)
+par(mfrow = c(1,1), mar = c(4,15,3,3), oma = c(3, 0, 2, 0))
 
-image.real3d(R2MatFull, pMatFull, x.labels = alt.x.labels, y.labels = c("env. filtering", "dispersal", "niche conserv.", "speciation", "competition"),
-             cex.metrics = .7, cex.models = 1.2, cex.processes = 1.4,
+image.real3d(R2MatFull, pMatFull, x.labels = alt.x.labels, y.labels = c("Env. filtering", "Dispersal", "Niche conserv.", "Speciation", "Competition"),
+             cex.metrics = 1.4, cex.models = 1.3, cex.processes = 1.4,
              boxes = T, boxProcesses = c(rep('env', length(env.metrics)),
                                          rep('dis', length(dis.metrics)),
                                          rep('mut', length(mut.metrics))), 
-             boxMetrics = c(env.metrics, dis.metrics, mut.metrics), lwd = 3,
-             srt = 90, cex.asterisk = 1)
+             boxMetrics = c(env.metrics, dis.metrics, mut.metrics), lwd = 5,
+             srt = 90, cex.asterisk = 2)
 
 mtext("Models", 1, outer = TRUE, cex = 2.5, at = .53)
-mtext("Metrics", 2, cex = 2.5, outer = TRUE, line = -3)
+#mtext("Metrics", 2, cex = 2.5, outer = TRUE, line = -3)
 mtext("Processes", 3, cex = 2.5, outer = TRUE, at = 0.53)
 dev.off()
 
