--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -129,15 +129,6 @@ rownames(corrs) = metricNames
 par(mar = c(8, 8, 10, 8))
 heatmaply(corrs, colors = cool_warm)
 
-# Get clustering order of metric names for Figure 2
-dissim = 1- corrs
-distances = as.dist(dissim)
-hc = hclust(distances)
-dend = as.dendrogram(hc)
-dend.order2 = order.dendrogram(dend)
-dend2 = seriate_dendrogram(dend, distances)
-dend.order = order.dendrogram(dend2)
-
 # Get clustering order of metric names for Figure 2 based on absolute value of correlations
 dissim = 1 - abs(corrs)
 distances = as.dist(dissim)
@@ -262,7 +253,7 @@ image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "lightblue", "gr
   abline(h = c(1:(dim(mat)[1] +1)) + 0.5)
   axis(2, at = ypos, labels = x.labels[metric.order], las = 2, cex.axis = cex.metrics)
   axis(3, at = seq(5, 45, by = 10), labels = y.labels, cex.axis = cex.processes, las = 1)
-  axis(1, at = xpos, labels = F)
+  axis(1, at = xpos, labels = F, tck = -0.01)
   box() 
   
   text(x = xpos, y = 0, srt = srt, adj = 1, xpd = TRUE, labels = rep(dimnames(mat)[[3]], 5), cex = cex.models)
@@ -300,10 +291,6 @@ image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "lightblue", "gr
 # mean_branch_length_ext, so only one is chosen to be included in the plot
 # based on which is likely to be more familiar or intuitive to readers.
 
-# These were identified from the overall correlation plot
-redundantMetrics = c('mean_branch_length', 'mean_branch_length_ext', 'nltt_base',
-                     'max_depth', 'diameter', 'area_per_pair', 'var_depth')
-
 agreement = numSigAgreements[(numAgreements[,1] >= 5 & numSigAgreements[,1] >= 4) |
                             (numAgreements[,2] >= 7 & numSigAgreements[,2] >= 6) | 
                             (numAgreements[,3] >= 4 & numSigAgreements[,3] >= 3) | 
@@ -331,20 +318,30 @@ par(mfrow = c(1,1), mar = c(4,15,3,3), oma = c(3, 0, 2, 0))
 
 image.real3d(R2MatFull, pMatFull, x.labels = alt.x.labels, y.labels = c("Env. filtering", "Dispersal", "Niche conserv.", "Speciation", "Competition"),
              cex.metrics = 1.4, cex.models = 1.3, cex.processes = 1.4,
-             boxes = T, boxProcesses = c(rep('env', length(env.metrics)),
+             boxes = F, 
+             boxProcesses = c(rep('env', length(env.metrics)),
                                          rep('dis', length(dis.metrics)),
                                          rep('mut', length(mut.metrics))), 
-             boxMetrics = c(env.metrics, dis.metrics, mut.metrics), lwd = 5,
-             srt = 90, cex.asterisk = 2)
+             boxMetrics = c(env.metrics, dis.metrics, mut.metrics), 
+             lwd = 5, srt = 90, cex.asterisk = 2, metric.order = dend.order)
 
 mtext("Models", 1, outer = TRUE, cex = 2.5, at = .53)
 #mtext("Metrics", 2, cex = 2.5, outer = TRUE, line = -3)
 mtext("Processes", 3, cex = 2.5, outer = TRUE, at = 0.53)
 dev.off()
 
+# boxes = F so that they can be plotted manually in larger blocks
+# Run `plot(dend, edgePar = list(lwd=2))` and copy and paste dendrogram
+# which must be both flipped horizontally and then rotated 90 deg to
+# add to the right side of the all_metrics_correlations.pdf plot.
+# Best if copied from window with wide x short dimensions.
 
 
 # Whether or not to include tree metrics for this plot
+# These were identified as redundant/correlated from the overall correlation plot
+redundantMetrics = c('mean_branch_length', 'mean_branch_length_ext', 'nltt_base',
+                     'max_depth', 'diameter', 'area_per_pair', 'var_depth')
+
 metricsToPlot = dimnames(R2MatFull)[[1]] %in% rownames(agreement) &
                            !dimnames(R2MatFull)[[1]] %in% redundantMetrics &
                            !dimnames(R2MatFull)[[1]] %in% richnessCorrelatedMetrics
