--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -88,13 +88,14 @@ metricCors = cor(simuData[, 24:75], use = "pairwise.complete.obs")
 # Metrics strongly correlated (> 0.9) with number_of_lineages
 richnessCorrelatedMetrics = row.names(metricCors)[metricCors[,1] >= 0.9]
 
-# all 52 tree metrics (now removing mntd)
+# all 50 tree metrics (now removing mntd and mpd, mathematically redundant to 
+#                      mean_branch_length_ext and psv, respectively)
 statisticsIndices1 = which(names(simuData) %in% row.names(metricCors) &
-                             names(simuData) != 'mntd')
+                             !names(simuData) %in% c('mntd', 'mpd'))
 # Only the tree metrics not strongly correlated with richness
 statisticsIndices2 = which(names(simuData) %in% row.names(metricCors) & 
                              !names(simuData) %in% richnessCorrelatedMetrics &
-                             names(simuData) != 'mntd') 
+                             !names(simuData) %in% c('mntd', 'mpd'))
 
 # Indices for the 5 simulation processes (env, dis, mut, nic, com)
 predictorsIndices = c(14,16,18,20,22)
@@ -128,8 +129,10 @@ metricNames = colnames(simuData)[statisticsIndices1]
 colnames(corrs) = metricNames
 rownames(corrs) = metricNames
 
+png("figures/FigureS1_metric_correlations.png", height = 1200, width = 900)
 par(mar = c(8, 8, 10, 8))
 heatmaply(corrs, colors = cool_warm)
+dev.off()
 
 # Get clustering order of metric names for Figure 2 based on absolute value of correlations
 dissim = 1 - abs(corrs)
@@ -338,6 +341,12 @@ dev.off()
 # add to the right side of the all_metrics_correlations.pdf plot.
 # Best if copied from window with wide x short dimensions.
 
+
+
+# Plotting only the subset of metrics that are not redundant with each other
+# or richness, aside from those commonly known 
+
+# *NOTE: This figure using image.real3d is not currently working for this subset.*
 
 # Whether or not to include tree metrics for this plot
 # These were identified as redundant/correlated from the overall correlation plot
@@ -917,8 +926,8 @@ write.csv(scaledPredictions2, 'derived_tree_data/scaled_predictions_empirical_tr
 # --bottom panel illustrates relative magnitude of mntd and laplac_spectrum_p
 # which were identified as the tree metrics with consistent responses to speciation
 
-empiricalModelInferencePlot('mut1', metric1='mntd', metric2='laplac_spectrum_p',
-                             met1label = 'MNTD', met2label = 'LSP', 
+empiricalModelInferencePlot('mut1', metric1='mean_branch_length_ext', metric2='laplac_spectrum_p',
+                             met1label = 'MBLE', met2label = 'LSP', 
                             model.abbrev = F, legend = TRUE, cex.legend = 1.7, 
                             cex.legendpts = 2.5, cex.metrics = 1.1, 
                             metric.offset = .24, cex.clade = 1.3, 
@@ -927,8 +936,8 @@ empiricalModelInferencePlot('mut1', metric1='mntd', metric2='laplac_spectrum_p',
                             cex.process = 1.4, lwd = 4)
 
 
-empiricalModelInferencePlot('mut1', metric1='mntd', metric2='laplac_spectrum_p',
-                              met1label = 'MNTD', met2label = 'LSP', 
+empiricalModelInferencePlot('mut1', metric1='mean_branch_length_ext', metric2='laplac_spectrum_p',
+                              met1label = 'MBLE', met2label = 'LSP', 
                              model.abbrev = F, legend = TRUE, cex.legend = 2, 
                              cex.legendpts = 2.5, cex.metrics = 1.5, 
                              metric.offset = .24, cex.clade = 1.4, 
